--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@mdi/font": "7.0.96",
     "apexcharts": "^3.41.0",
     "core-js": "^3.29.0",
-    "pinia": "^2.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
     "vue3-apexcharts": "^1.4.4",
     "vuetify": "^3.0.0",
+    "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
